bk_ida/gccida/c3/print_rtl_graph_with_bb
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:723:4: error: expected ';' after expression
rtx v28; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:723:5: error: use of undeclared identifier 'v28'
rtx v28; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:724:1: error: must use 'enum' tag to refer to type 'graph_dump_types'
graph_dump_types v29; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:738:6: error: use of undeclared identifier 'v43'
rtx *v43; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:745:6: error: use of undeclared identifier 'v50'
rtx *v50; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:746:4: error: expected ';' after expression
rtx v51; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:746:5: error: use of undeclared identifier 'v51'
rtx v51; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:763:4: error: expected ';' after expression
rtx tmp_rtx; // [rsp+40h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:763:5: error: use of undeclared identifier 'tmp_rtx'
rtx tmp_rtx; // [rsp+40h] [rbp-30h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:765:1: error: use of undeclared identifier 'tmp_rtx'
tmp_rtx = rtx_first; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:784:6: error: use of undeclared identifier 'tmp_rtx'
if ( tmp_rtx ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:828:7: error: use of undeclared identifier 'tmp_rtx'
rtx = tmp_rtx[1].fld[0].rtx; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:836:1: error: use of undeclared identifier 'tmp_rtx'
tmp_rtx = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:841:37: error: use of undeclared identifier 'tmp_rtx'
if ( end[rtint] < 0 && ( *( _WORD *)tmp_rtx == 35 || *( _WORD *)tmp_rtx == 37) ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:841:65: error: use of undeclared identifier 'tmp_rtx'
if ( end[rtint] < 0 && ( *( _WORD *)tmp_rtx == 35 || *( _WORD *)tmp_rtx == 37) ) 
                                                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:863:1: error: use of undeclared identifier 'tmp_rtx'
tmp_rtx->fld[0].rtuint, 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:869:1: error: use of undeclared identifier 'v28'
v28 = tmp_rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:869:7: error: use of undeclared identifier 'tmp_rtx'
v28 = tmp_rtx; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/graph.c:871:20: error: use of undeclared identifier 'tmp_rtx'
if ( !*( _QWORD *)&tmp_rtx[1] && graph_dump_format == vcg ) 
                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_graph_with_bb/src/obj/graph.o] Error 1
